--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <textarea id="input" rows="9" cols="30"></textarea>
+    <br>
+    <input type="radio" id="radio1" value="num" name="type" checked> Цифры
+    <input type="radio" id="radio2" value="let" name="type"> Буквы
+    <br>
+    <textarea id="output" rows="9" cols="30"></textarea>
     <script src="js/script.js"></script>
 </body>
 </html>
